fix: fills background correctly on Mobile devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,6 +2,7 @@ html, body {
 	width: 100vw;
 	height: 100vh;
 	background-color: #485fc7;
+	overflow: auto;
 	user-select: none;
 }
 
